--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALIGN Session - Aderonke Filani</title> <meta property="og:image" content="https://digitalmannerismmovement-coaching.github.io/align-landing/thumbnail.png">
+    <title>ALIGN Session - Aderonke Filani</title> 
+    <meta property="og:image" content="https://digitalmannerismmovement-coaching.github.io/align-landing/thumbnail.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="twitter:card" content="summary_large_image">
